--- a/GabrielVenturaPortifolio/index.html
+++ b/GabrielVenturaPortifolio/index.html
@@ -154,12 +154,12 @@
                      
                     </div>
                     <div class="buttons">
-                      <button type="button"><a href="https://github.com/gabrielsventura05/PaginaAnimada"
+                      <button type="button"><a href="https://github.com/gabrielsventura05/MaiaraVazEsteticista"
                         target="_blank">
                         Github
                       </a>
                     </button>
-                      <button type="button"><a href="https://gabrielsventura05.github.io/PaginaAnimada/"
+                      <button type="button"><a href="https://gabrielsventura05.github.io/MaiaraVazEsteticista/index.html"
                         target="_blank">
                         Site
                       </a>
